# Wafer_Pulse

./: .dockerignore  .env.example  .gitignore  CHecklist.md  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  daily-training.yml
config/: cloud_provisioning_contract.yaml  params.yaml
data/: .gitignore  secom.data.dvc  secom_labels.data.dvc
data/Artifacts/: .gitignore
data/Prediction_Batch_files/: .~lock.wafer_07012020_041011.csv#
data/Train_data/: .gitignore  selected_features_secom_data.csv.dvc
data/Training_Batch_Files/: .~lock.wafer_07012020_041011.csv#
data/preprocessed_data/: .gitignore  preprocessed_secom_data.csv.dvc  scaled_secom_data.csv.dvc  selected_features_secom_data.csv
data/raw/: .gitignore  combined_secom_data.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
infrastructure/terraform/: main.tf  minimal.auto.tfvars  minimal.auto.tfvars.example  outputs.tf  variables.tf
models/: best_params.pkl  random_forest_model.pkl  training_results.pkl  xgboost_model.pkl
notebooks/: Data_Exploration.ipynb
src/: pipeline_01_config_setup_fun.py  pipeline_02_data_preparation.py  pipeline_03_data_preprocessing.py  pipeline_04_feature_normalize_std.py  pipeline_05_feature_selection.py  pipeline_06_model_training.py  pipeline_07_model_inference.py
src/api/: main.py  schemas.py
src/infrastructure/: aws_clients.py  db.py  mlflow_tracking.py  model_runtime.py  retry.py  settings.py
src/lambda_handlers/: batch_ingestion.py
tests/: test_api_schemas.py  test_data.py
wafer_mlops/: pyvenv.cfg
wafer_pulse/: pipeline_01_data_preparation.py
