[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wafer_pulse"
version = "0.0.1"
description = "Predictive maintenance for silicon wafers: using sensor-driven AI to preemptively identify defects and streamline semiconductor manufacturing"
authors = [
  { name = "PreritSM" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.14",
]


[tool.ruff]
line-length = 99
src = ["wafer_pulse"]
include = ["pyproject.toml", "wafer_pulse/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["wafer_pulse"]
force-sort-within-sections = true

